tests/fixtures/invalid/none_sub_list.py
# Cannot subtract None and List[int]
x: None = None - [1, 2, 3]
